--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -403,7 +403,7 @@
                                     type="button"
                                     (click)="onSubmit( i )"
                                     [disabled]="getCriterios( i ).dirty === false">
-                                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
                             </button>
                         </div>
                 </section>
