--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
@@ -356,9 +356,8 @@
             <button mat-button
                     color="warn"
                     class="btn-guardar"
-                    type="submit"
-                    [disabled]="addressForm.dirty === false">
-                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                    type="submit">
+                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
