--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -541,7 +541,7 @@
                                     [disabled]="criterio.dirty === false"
                                     type="button"
                                     (click)="onSubmit( i )">
-                                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
                             </button>
                         </div>
                 </mat-expansion-panel> 
