--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actuacion-controv-contrc/components/verdetalleedit-avance-actua-derivadas/verdetalleedit-avance-actua-derivadas.component.html
@@ -221,7 +221,7 @@
         </mat-card>
         <div class="text-center mb-2em">
             <button mat-button color="warn" class="btn-guardar" type="submit">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
