--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/accord-vigencias-valor/accord-vigencias-valor.component.html
@@ -192,7 +192,7 @@
                                 type="submit"
                                 [disabled]="!seguro.dirty"
                             >
-                                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                                <img src="assets/img/icon/guardar.svg" alt="Guardar">
                         </button>
                     </div>
                 </mat-expansion-panel>
