--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/lista-chequeo-rapg/lista-chequeo-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/lista-chequeo-rapg/lista-chequeo-rapg.component.html
@@ -180,7 +180,7 @@
                     class="btn-guardar"
                     type="submit"
                     [disabled]="addressForm.dirty === false">
-                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
