--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-observaciones-item-listchequeo/dialog-observaciones-item-listchequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-observaciones-item-listchequeo/dialog-observaciones-item-listchequeo.component.html
@@ -76,7 +76,7 @@
             </div>
             <div class="text-center">
                 <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.invalid">
-                    Realizar observación
+                    Registrar observación
                 </button>
             </div>
         </form>
