--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
@@ -113,8 +113,8 @@
             </mat-card>
         </mat-expansion-panel>
         <div class="text-center mb-2em" *ngIf="solicitudPagoModificado.solicitudPagoListaChequeo.length > 0">
-            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()" [disabled]="seDiligencioCampo === false">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+            <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </ng-template>
