--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
@@ -115,7 +115,7 @@
 								type="button"
 								(click)="guardar()"
 								[disabled]="formActividadesRealizadas.get('tieneObservaciones').value === null">
-							<img src="assets/img/icon/guardar.svg" alt="Regresar">
+							<img src="assets/img/icon/guardar.svg" alt="Guardar">
 						</button>
 					</div>
 				</form>
@@ -270,7 +270,7 @@
 								type="button"
 								(click)="guardarSemanaSiguiente()"
 								[disabled]="formActividadesRealizadasSiguienteSemana.get('tieneObservaciones').value === null">
-							<img src="assets/img/icon/guardar.svg" alt="Regresar">
+							<img src="assets/img/icon/guardar.svg" alt="Guardar">
 						</button>
 					</div>
 				</form>
