--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-avance-fisico/tabla-avance-fisico.component.html
@@ -166,7 +166,7 @@
             </div>
             <div class="text-center mt-1em">
                 <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formAvanceFisico.get('tieneObservaciones').value === null">
-                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
                 </button>
             </div>
         </form>
