--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/ver-detalle-muestras/ver-detalle-muestras.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/ver-detalle-muestras/ver-detalle-muestras.component.html
@@ -129,7 +129,7 @@
                                     type="button"
                                     (click)="guardar( muestra )"
                                     [disabled]="muestra.get('tieneObservacionSupervisor').value === null">
-                                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                                <img src="assets/img/icon/guardar.svg" alt="Guardar">
                             </button>
                         </div>
 
