--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/form-reporte-actividades-realizadas/form-reporte-actividades-realizadas.component.html
@@ -89,7 +89,7 @@
                             type="button"
                             [disabled]="formActividadesRealizadas.get('tieneObservaciones').value === null"
                             (click)="guardar()">
-                        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                        <img src="assets/img/icon/guardar.svg" alt="Guardar">
                     </button>
                 </div>
             </form>
@@ -218,7 +218,7 @@
                             type="button"
                             [disabled]="formActividadesRealizadasSiguienteSemana.get('tieneObservaciones').value === null"
                             (click)="guardarSemanaSiguiente()">
-                        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                        <img src="assets/img/icon/guardar.svg" alt="Guardar">
                     </button>
                 </div>
             </form>
