--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-ambiental/gestion-ambiental.component.html
@@ -587,7 +587,7 @@
                                         type="button"
                                         [disabled]="formManejoOtra.get('tieneObservaciones').value === null"
                                         (click)="guardarManejoOtra()">
-                                        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                                        <img src="assets/img/icon/guardar.svg" alt="Guardar">
                                 </button>
                             </div>
                         </form>
