--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/dialog-devolver-sol-pago-gog/dialog-devolver-sol-pago-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/dialog-devolver-sol-pago-gog/dialog-devolver-sol-pago-gog.component.html
@@ -84,7 +84,7 @@
                 class="btn-guardar"
                 [disabled]="addressForm.dirty === false"
                 type="submit">
-            <img src="assets/img/icon/guardar.svg" alt="Regresar">
+            <img src="assets/img/icon/guardar.svg" alt="Guardar">
         </button>
     </div>
 </form>
