--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-estrateg-pagos-gog/form-estrateg-pagos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-estrateg-pagos-gog/form-estrateg-pagos-gog.component.html
@@ -93,7 +93,7 @@
                     class="btn-guardar"
                     type="submit"
                     [disabled]="addressForm.dirty === false">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
