--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-origen/form-origen.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-origen/form-origen.component.html
@@ -111,7 +111,7 @@
                         class="btn-guardar"
                         type="submit"
                         [disabled]="aportantes.dirty === false">
-                        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                        <img src="assets/img/icon/guardar.svg" alt="Guardar">
                 </button>
             </div>
         </form>
