--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro/form-tercero-giro.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro/form-tercero-giro.component.html
@@ -507,7 +507,7 @@
                     class="btn-guardar"
                     type="submit"
                     [disabled]="addressForm.dirty === false">
-                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
