--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -90,7 +90,7 @@
             !addressForm.get('requiereTransladoRecursos').value === false
           "
           >
-            <img src="assets/img/icon/guardar.svg" alt="Regresar">
+            <img src="assets/img/icon/guardar.svg" alt="Guardar">
         </button>
     </div>
 </form>
