--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/observaciones-especificas-rapg/observaciones-especificas-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/observaciones-especificas-rapg/observaciones-especificas-rapg.component.html
@@ -73,7 +73,7 @@
         </div>
         <div class="text-center mb-2em mt-2em">
             <button mat-button color="warn" class="btn-guardar" type="submit">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
