--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
@@ -213,7 +213,7 @@
                     class="btn-guardar"
                     type="submit"
                     [disabled]="checkDisabledBtn()">
-                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
