--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-listachequeo-expensas/form-listachequeo-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-listachequeo-expensas/form-listachequeo-expensas.component.html
@@ -71,7 +71,7 @@
     </div>
     <div class="text-center mb-2em" style="margin-top: 10px;">
         <button mat-button color="warn" class="btn-guardar" type="submit">
-            <img src="assets/img/icon/guardar.svg" alt="Regresar">
+            <img src="assets/img/icon/guardar.svg" alt="Guardar">
         </button>
     </div>
 </form>
