--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-expensas/form-solicitud-expensas.component.html
@@ -267,7 +267,7 @@
         </mat-card>
         <div class="text-center mb-2em">
             <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
