--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-otros-costosservicios/form-solicitud-otros-costosservicios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-solicitud-otros-costosservicios/form-solicitud-otros-costosservicios.component.html
@@ -200,7 +200,7 @@
         <div class="text-center mb-2em">
             <button mat-button color="warn" class="btn-guardar" type="submit"
                 [disabled]="addressForm.get( 'numeroContrato' ).dirty === false">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
