--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -30,7 +30,7 @@
             <p style="margin-left: 2em;">Valor del DDP: <b> {{ solicitudPago.contratoSon.contratacion.disponibilidadPresupuestal[ 0 ].valorSolicitud | currency:'':'symbol-narrow':'.0-0' }} </b></p>
         </div>
 
-        <div class="d-flex justify-content-center table-responsive tabla-gris">
+        <!-- <div class="d-flex justify-content-center table-responsive tabla-gris">
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 40%;">
                 <ng-container matColumnDef="drp">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
@@ -51,9 +51,9 @@
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-        </div>
+        </div> -->
 
-        <app-tabla-aportantes *ngIf="solicitudPago.tablaUsoFuenteAportante !== undefined && solicitudPago.tablaUsoFuenteAportante.usos.length > 0" [tablaUsoFuenteAportante]="solicitudPago.tablaUsoFuenteAportante.usos"></app-tabla-aportantes>
+        <app-tabla-aportantes *ngIf="solicitudPago.tablaUsoFuenteAportante !== undefined && solicitudPago.tablaUsoFuenteAportante.usos.length > 0" [tablaUsoFuenteAportante]="solicitudPago.tablaUsoFuenteAportante.usos" [tablaDrpUso]="solicitudPago.tablaDrpUso"></app-tabla-aportantes>
     </mat-expansion-panel>
 
     <mat-expansion-panel class="expansion-style sub-expansion">
