--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/avance-financiero/avance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/avance-financiero/avance-financiero.component.html
@@ -114,7 +114,7 @@
         </div>
         <div class="text-center mt-1em">
             <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formAvanceFinanciero.get('tieneObservaciones').value === null">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
