--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
@@ -112,7 +112,7 @@
                             type="submit"
                             [disabled]="formGestionCalidad.get('tieneObservaciones').value === null"
                             (click)="guardar()">
-                        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                        <img src="assets/img/icon/guardar.svg" alt="Guardar">
                     </button>
                 </div>
             </form>
@@ -281,7 +281,7 @@
                                         type="button"
                                         [disabled]="ensayo.get('tieneObservaciones').value === null"
                                         (click)="guardarEnsayo( ensayo )">
-                                    <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
                                 </button>
                             </div>
                             <section class="text-center table-responsive size-table" style="margin-top: 2em;" *ngIf="ensayo.get( 'historial' ).value.length > 0">
