--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-valid-listchequeo-validfsp/form-valid-listchequeo-validfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-valid-listchequeo-validfsp/form-valid-listchequeo-validfsp.component.html
@@ -52,7 +52,7 @@
         </div>
         <div class="text-center mb-2em">
             <button mat-button color="warn" class="btn-guardar mt1" type="submit">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </mat-expansion-panel>
