--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/registro-fotografico/registro-fotografico.component.html
@@ -80,7 +80,7 @@
         </div>
         <div class="text-center mt-1em">
             <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formRegistroFotografico.get('tieneObservaciones').value === null">
-                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </div>
     </form>
