--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/reporte-actividades/reporte-actividades.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/reporte-actividades/reporte-actividades.component.html
@@ -86,7 +86,7 @@
                         </div>
                         <div class="text-center mt-1em">
                             <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="formResumenGeneral.get('tieneObservaciones').value === null">
-                                <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                                <img src="assets/img/icon/guardar.svg" alt="Guardar">
                             </button>
                         </div>
                     </form>
