--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/tabla-aportantes/tabla-aportantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-orden-giro/components/tabla-aportantes/tabla-aportantes.component.html
@@ -1,48 +1,69 @@
-<section class="table-responsive tabla-gris mt-3em">
-    <table mat-table [dataSource]="dataSource" matSort>
-  
-        <ng-container matColumnDef="uso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 28%;"> Uso </th>
-          <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreUso }} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="fuente">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Fuente </th>
-          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let fuente of element.fuentes">
-              {{ fuente.nombreFuente }}
+<section class="d-flex justify-content-center table-responsive tabla-gris">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <ng-container matColumnDef="drp">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>DRP</th>
+      <td mat-cell *matCellDef="let element" align="center">{{ element.enum }}</td>
+    </ng-container>
+    <ng-container matColumnDef="numDrp">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Número DRP</th>
+      <td mat-cell *matCellDef="let element" align="center">{{ element.numeroDrp }}</td>
+    </ng-container>
+    <ng-container matColumnDef="ProyectoLLaveMen">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
+      <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+        <div
+          class="sub-item-table justify-content-center align-items-center text-center"
+          *ngFor="let el of element.listDyProyectos; let i = index"
+          [class.h-3]="el.listDyUsos.length === 1"
+          [class.h-6]="el.listDyUsos.length === 2"
+          [class.h-9]="el.listDyUsos.length === 3"
+        >
+          {{ el.nombre }}
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="NombreUso">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre uso</th>
+      <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+        <div
+          class="sub-item-table justify-content-center align-items-center"
+          *ngFor="let el of element.listDyProyectos; let i = index"
+        >
+          <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+            <div class="sub-item-table--element">
+              {{ el2.nombre }}
             </div>
-          </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="aportante">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Aportante </th>
-          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let aportante of element.aportante">
-              {{ aportante.nombreAportante }}
-            </div>
-          </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="valorUso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 15%;"> Valor de uso </th>
-          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let valorUso of element.valorUso">
-              ${{ valorUso }}
-            </div>
-          </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="saldoActual">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%;"> Saldo actual de uso </th>
-          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let saldoActualUso of element.saldoActualUso">
-              ${{ saldoActualUso }}
-            </div>
-          </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="valor">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
+      <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+        <div
+          class="sub-item-table justify-content-center align-items-center"
+          *ngFor="let el of element.listDyProyectos; let i = index"
+        >
+          <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+            <div class="sub-item-table--element">${{ el2.valorUso }}</div>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="saldo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo DRP</th>
+      <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+        <div
+          class="sub-item-table justify-content-center align-items-center"
+          *ngFor="let el of element.listDyProyectos; let i = index"
+        >
+          <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+            <div class="sub-item-table--element">${{ el2.saldo }}</div>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </section>
