--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-observaciones-validfsp/dialog-observaciones-validfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-observaciones-validfsp/dialog-observaciones-validfsp.component.html
@@ -84,7 +84,7 @@
         </div>
         <div class="text-center" style="margin-top: 15px;">
             <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.invalid">
-                Realizar observación
+                Registrar observación
             </button>
         </div>
     </form>
