--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
@@ -74,7 +74,7 @@
         </div>
         <div class="text-center" style="margin-top: 15px;">
             <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.dirty === false">
-                Realizar observación
+                Registrar observación
             </button>
         </div>
     </form>
