Ajustes de plantilla v12

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/reporte-semanal/reporte-semanal.component.html
@@ -11780,6 +11780,66 @@ white-space: normal;border-right: 1pt solid black; width: 1360pt">
       <td class="xl89">&nbsp;</td>
       <td class="xl89">&nbsp;</td>
     </tr>
+    <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt">
+    <td height="42" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td colspan="10" class="xl528" width="173"
+      style="font-size: 6pt;width: 130pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; border-right: 0.5pt solid black;">
+      URL con soporte</td>
+    <td class="xl96" width="35"
+      style="font-size: 6pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; width: 26pt"
+      colspan="22">&nbsp;</td>
+  </tr>
+  <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt">
+    <td height="42" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td colspan="10" class="xl528" width="173"
+      style="font-size: 6pt;width: 130pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; border-right: 0.5pt solid black;">
+      Observaciones</td>
+    <td class="xl96" width="35"
+      style="font-size: 6pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; width: 26pt"
+      colspan="22">&nbsp;</td>
+  </tr>
+  <tr class="xl89" height="150" style="mso-height-source: userset; height: 13.2pt">
+    <td height="150" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td class="xl96" width="35"
+      style="font-size: 6pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; width: 26pt"
+      colspan="32">&nbsp;</td>
+  </tr>
+  <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt">
+    <td height="42" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td colspan="32" class="xl528" width="173"
+      style="font-size: 6pt;width: 130pt; border-right: 0.5pt solid black; border-right: 0.5pt solid black; font-weight: 700;">
+      FIRMA INTERVENTOR ( DIRECTOR DE INTERVENTORÍA)</td>
+  </tr>
+  <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt">
+    <td height="42" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td colspan="32" class="xl528" width="173"
+      style="font-size: 6pt;width: 130pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; border-right: 0.5pt solid black; font-weight: 700;">
+      NOMBRE:</td>
+  </tr>
+  <tr class="xl89" height="150" style="mso-height-source: userset; height: 13.2pt">
+    <td height="150" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td class="xl96" width="35"
+      style="font-size: 6pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; width: 26pt"
+      colspan="32">&nbsp;</td>
+  </tr>
+  <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt">
+    <td height="42" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td colspan="32" class="xl528" width="173"
+      style="font-size: 6pt;width: 130pt; border-right: 0.5pt solid black; border-right: 0.5pt solid black; font-weight: 700;">
+      * VoBo SUPERVISOR (FIRMA)</td>
+  </tr>
+  <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt">
+    <td height="42" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td colspan="32" class="xl528" width="173"
+      style="font-size: 6pt;width: 130pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; border-right: 0.5pt solid black; font-weight: 700;">
+      NOMBRE SUPERVISOR: </td>
+  </tr>
+  <tr class="xl89" height="42" style="mso-height-source: userset; height: 13.2pt">
+    <td height="42" class="xl89" style="height: 13.2pt">&nbsp;</td>
+    <td colspan="32" class="xl528" width="173"
+      style="font-size: 6pt;width: 130pt;border-bottom: 0.5pt solid black; border-right: 0.5pt solid black; border-right: 0.5pt solid black; font-weight: 700;">
+      * Una vez  sea revisado y aceptado este informe, el supervisor deberá evidenciar la aceptación con su firma  </td>
+  </tr>
   </table>
 </div>
 
