--- a/asivamosffie.web/asivamosffie/src/app/shared/components/header/header.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header print-d-none">
   <img
     src="assets/img/logo/FFIE.svg"
     alt="Fondo de Financiamiento de la Infraestructura Educativa"
