--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
@@ -308,7 +308,7 @@
             </mat-card-content>
         </mat-card>
 
-        <div *ngIf="obsVerificar !== undefined || obsAprobar !== undefined || obsTramitar !== undefined">
+        <!-- <div *ngIf="obsVerificar !== undefined || obsAprobar !== undefined || obsTramitar !== undefined">
             <mat-card class="shipping-card border" align="left" *ngIf="obsVerificar !== undefined">
                 <mat-card-header class="header-card">
                     <mat-card-title class="header-card--text card-title-detalle">
@@ -350,7 +350,7 @@
                     <section [innerHTML]="obsTramitar.observacion" style="margin-left: 2em;" *ngIf="obsTramitar.tieneObservacion === true"></section>
                 </mat-card-content>
             </mat-card>
-        </div>
+        </div> -->
 
         <div class="text-center mb-2em">
             <button mat-button
