Tipo de documento en solicitud de pago

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descripcion-factura/form-descripcion-factura.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descripcion-factura/form-descripcion-factura.component.html
@@ -32,7 +32,7 @@
                               Tipo de documento
                       </label>
                     </div>
-                    <div class="col">
+                    <div>
                       <mat-radio-group class="radioInput" formControlName="esFactura" required>
                         <mat-radio-button [value]="true">Factura</mat-radio-button>
                         <mat-radio-button [value]="false">Cuenta de cobro</mat-radio-button>
